# Yin-Yang

./: .directory  .flake8  .gitignore  .gitignore~  .pylintrc  LICENSE  README  README.md  README.md~  README_zh.md  README_zh_CN.md  README_zh_TW.md  build.py  communicate.py  flatpak-poetry-generator.py  generated-poetry-sources.json  install.sh  main.py  main.spec  pubspec.yaml  pyproject.toml  python3-PySide6-Addons.json  python3-PySide6-Essentials.json  python3-numpy.json  python3-psutil.json  python3-python-dateutil.json  python3-requests.json  python3-shiboken6.json  python3-suntime.json  python3-systemd-python.json  requirements.txt  resources.qrc  resources_rc.py  runner.sh  setup.py  sh.oskar.yin-yang.json  sh.oskar.yin_yang.json  sh.oskar.yin_yang.metainfo.xml  sh.oskarsh.yin_yang.metainfo.xml  uninstall.sh  (+1 more)
.github/: CONTRIBUTING.md  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  plugin_request.md
.github/workflows/: build-and-release.yml  flatpak-ci.yml  python-app.yml  python-ci.yml
android/app/: build.gradle
assets/: yin_yang.json
designer/: main_window.ui  resources.qrc
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: Config.dart  EventDispatcher.dart  main.dart
lib/pages/: home.dart  settings.dart  splash.dart
lib/plugins/: kde.dart
lib/scripts/: getOS.sh
lib/theme/: ThemeNotifier.dart  theme.dart
lib/widgets/: CustomButton.dart  kdeSettings.dart
linux/: CMakeLists.txt  my_application.cc
resources/: README.md  Yin-Yang.desktop  resources.qrc  sh.oskar.yin_yang.metainfo.xml  yin-yang  yin_yang  yin_yang.desktop  yin_yang.json  yin_yang.service  yin_yang.timer
resources/translations/: yin_yang.de_DE.qm  yin_yang.de_DE.ts  yin_yang.nl_NL.qm  yin_yang.nl_NL.ts  yin_yang.zh_CN.qm  yin_yang.zh_CN.ts  yin_yang.zh_TW.qm  yin_yang.zh_TW.ts
scripts/: build_ui.sh  flatpak-install.sh  install.sh  runner.sh  uninstall.sh  yin-yang
src/: buildUi.py  change_wallpaper.sh  config.py  daemon_handler.py  enums.py  gui.py  meta.py  yin-yang  yin_yang.py
src/plugins/: __init__.py  _plugin.py  atom.py  brave.py  colors.py  custom.py  firefox.py  gedit.py  gnome.py  gtk.py  gtkkde.py  icons.py  kde.py  konsole.py  kvantum.py  notify.py  only_office.py  sound.py  system.py  vscode.py  wallpaper.py  xfce.py
src/ui/: config_window.py  icon.qrc  main.qml  main_window.py  main_window_connector.py  mainwindow.py  mainwindow.ui  settings.py  settings.ui  ui.pro  ui_mainwindow.py  ui_settings.py  yin-yang-icon.qrc
test/: widget_test.dart
tests/: test_communication.py  test_config.py  test_daemon.py  test_daemon_handler.py  test_plugin_class.py  test_plugins.py
web/: index.html  manifest.json
yin_yang/: NotificationHandler.py  __main__.py  communicate.py  config.py  daemon_handler.py  helpers.py  meta.py  notification_handler.py  position.py  repeat_timer.py  resources_rc.py  theme_switcher.py  yin_yang.py
yin_yang/build-test-Desktop_Qt_5_12_0_GCC_64bit-Debug/: .qmake.stash  Makefile  moc_mainwindow.cpp  test  ui_mainwindow.h
yin_yang/build-ui-Desktop_Qt_5_12_0_GCC_64bit-Debug/: Makefile  moc_mainwindow.cpp  moc_predefs.h  qrc_yin-yang-icon.cpp  ui  (+1 more)
(+25 files in other folders)
