[project]
name = "yin_yang"
version = "3.3.0"
license = "MIT"
description = "Auto Nightmode for KDE, Gnome, Budgie, VSCode, Atom and more."
authors = [
  { name = "Oskar Schachtschneider" }
]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
  # PySide is already included in the Flatpak base app. 
  # If building from source, preferably install these from your system package manager.
  # "PySide6-Essentials==6.8.1",
  # "PySide6-Addons==6.8.1",
  "psutil==6.1.0",
  "shiboken6==6.8.1",
  "suntime~=1.3.2",
  "systemd-python==235",
  "requests==2.32.3",
  "python-dateutil~=2.9.0.post0"
]

[project.urls]
repository = "https://github.com/oskarsh/Yin-Yang"

[project.scripts]
yin_yang = "yin_yang:__main__"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  { include = "yin_yang" }
]

[tool.poetry.group.DEV.dependencies]
flake8 = "^7.2.0"
pytest = "^8.1.1"
pyyaml = "^6.0.1"
toml = "^0.10.2"
setuptools = "^69.5.1"
wheel = "^0.43.0"
cython = "<3.0"
# necessary to compile ui files
PySide6-Essentials="^6.8.1"
PySide6-Addons="^6.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["yin_yang"]
exclude = ["**/node_modules",
  "**/__pycache__",
  "build",
  "pytest_cache",
  ".flatpak-builder"
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"